--- a/lib/NEWS
+++ b/lib/NEWS
@@ -4,6 +4,11 @@ See the end for copying conditions.
 
 * Version 0.2.28 (unreleased)
 
+** Update gnulib files.
+Under Windows, the randomness functions will now prefer the Intel RND
+crypto provider.  CryptAcquireContext is now invoked with the
+CRYPT_VERIFY_CONTEXT parameter.
+
 ** API and ABI modifications.
 No changes since last version.
 
