--- a/NEWS
+++ b/NEWS
@@ -6,7 +6,7 @@ Note that changes to the GNU SASL Library is documented in lib/NEWS.
 This file track changes to the remaining, non-library, parts of GNU
 SASL.  That include the manual, the command line tool, and self tests.
 
-* Version 0.2.28 (unreleased)
+* Version 0.2.28 (released 2008-08-20)
 
 ** gsasl: Rewrite to use poll instead of select.
 Will allow easier porting to Mingw32 in the future.
