--- a/lib/NEWS
+++ b/lib/NEWS
@@ -2,7 +2,7 @@ GNU SASL LIBRARY NEWS -- History of user-visible changes.
 Copyright (C) 2002, 2003, 2004, 2005, 2006, 2007, 2008 Simon Josefsson
 See the end for copying conditions.
 
-* Version 0.2.28 (unreleased)
+* Version 0.2.28 (released 2008-08-20)
 
 ** New function to get mechanism name used in current session.
 The function is gsasl_mechanism_name.
