Fix license discussions.

--- a/README
+++ b/README
@@ -1,5 +1,5 @@
 GNU SASL README -- Important introductory notes.
-Copyright (C) 2002, 2003, 2004, 2005, 2007 Simon Josefsson
+Copyright (C) 2002, 2003, 2004, 2005, 2007, 2008 Simon Josefsson
 See the end for copying conditions.
 
 This directory holds GNU SASL which is an implementation of the Simple
@@ -7,19 +7,18 @@ Authentication and Security Layer (SASL).  See doc/gsasl.{info,ps,pdf}
 for the manual.
 
 The GNU SASL library is licensed under the GNU Lesser General Public
-License (LGPL) version 2.1.  See the file lib/COPYING.  The GNU
-project typically uses the GNU General Public License (GPL) for
-libraries, and not the LGPL, but for this project we decided that we
-would get more help from the community if we used the LGPL, as other
-free SASL implementations exists.  See also
-<http://www.gnu.org/licenses/why-not-lgpl.html>.
+License (LGPL) version 2.1 (or later).  The GNU project typically uses
+the GNU General Public License (GPL) for libraries, and not the LGPL,
+but for this project we decided that we would get more help from the
+community if we used the LGPLv2.1+, as other free SASL implementations
+exists.  See also <http://www.gnu.org/licenses/why-not-lgpl.html>.
 
 The command-line application and test suite (src/, and tests/) are
-licensed under the GNU General Public License license version 3.0.
-See the file COPYING.
+licensed under the GNU General Public License license version 3.0 (or
+later).  See the file COPYING.
 
 The documentation (doc/) is licensed under the GNU Free Documentation
-License.
+License version 1.2 (or later).
 
 If you need help to use GNU SASL, or wish to help others, you are
 invited to join our mailing list help-gsasl@gnu.org, see
