--- a/lib/README
+++ b/lib/README
@@ -1,16 +1,16 @@
 GNU SASL LIBRARY README -- Important introductory notes.
-Copyright (C) 2002, 2003, 2004 Simon Josefsson
+Copyright (C) 2002, 2003, 2004, 2008 Simon Josefsson
 See the end for copying conditions.
 
 This directory holds the GNU SASL library which is an implementation
 of the Simple Authentication and Security Layer (SASL).
 
 The GNU SASL library is licensed under the GNU Lesser General Public
-License (LGPL).  The GNU project typically uses the GNU General Public
-License (GPL) for libraries, and not the LGPL, but for this project we
-decided that we would get more help from the community if we used the
-LGPL, as other free SASL implementations exists.  See also
-<http://www.gnu.org/licenses/why-not-lgpl.html>.
+License (LGPL) version 2.1 (or later).  The GNU project typically uses
+the GNU General Public License (GPL) for libraries, and not the LGPL,
+but for this project we decided that we would get more help from the
+community if we used the LGPLv2.1+, as other free SASL implementations
+exists.  See also <http://www.gnu.org/licenses/why-not-lgpl.html>.
 
 Currently there is some support for the following mechanisms:
 
