DIGEST-MD5 server: Convert latin-1 realm to UTF-8 when needed. Reported by Adam Goode <adam@spicenitz.org>.

--- a/THANKS
+++ b/THANKS
@@ -35,6 +35,7 @@ Enrico Scholz
 Martin Rozee
 Pawel Widera
 Gazsó Attila
+Adam Goode <adam@spicenitz.org>
 
 ----------------------------------------------------------------------
 Copying and distribution of this file, with or without modification,
