--- a/NEWS
+++ b/NEWS
@@ -8,6 +8,8 @@ SASL.  That include the manual, the command line tool, and self tests.
 
 * Version 0.2.29 (unreleased)
 
+** tests: Add self test of obsolete base64 functions.
+
 * Version 0.2.28 (released 2008-08-20)
 
 ** gsasl: Rewrite to use poll instead of select.
