--- a/THANKS
+++ b/THANKS
@@ -31,7 +31,7 @@ Maxim Britov
 Brad Hards
 James Canete
 Daniel Armyr
-Enrico Scholz
+Enrico Scholz <enrico.scholz@informatik.tu-chemnitz.de>
 Martin Rozee
 Pawel Widera
 Gazsó Attila
