--- a/NEWS
+++ b/NEWS
@@ -8,6 +8,9 @@ SASL.  That include the manual, the command line tool, and self tests.
 
 * Version 0.2.29 (unreleased)
 
+** gsasl: Don't use poll with POLLOUT to avoid busy-waiting.
+Reported by Enrico Scholz <enrico.scholz@informatik.tu-chemnitz.de>.
+
 ** doc: Error codes are now extracted using official library APIs.
 
 ** tests: Add self test of obsolete base64 functions.
